force-app/main/default/objects/SampleAb__c/SampleAb__c.object-meta.xml
<CustomObject>
    <label>SampleAb</label>
    <nameField>
        <label>SampleAb Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SampleAbs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>