force-app/main/default/objects/SampleAb__c/fields/FieldB__c.field-meta.xml
<CustomField>
    <fullName>FieldB__c</fullName>
    <label>FieldB</label>
    <length>3</length>
    <type>Text</type>
</CustomField>