force-app/main/default/objects/SampleAb__c/fields/FieldC__c.field-meta.xml
<CustomField>
    <fullName>FieldC__c</fullName>
    <label>FieldC</label>
    <length>4</length>
    <type>Text</type>
</CustomField>