force-app/main/default/objects/SampleAb__c/fields/FieldD__c.field-meta.xml
<CustomField>
    <fullName>FieldD__c</fullName>
    <label>FieldD</label>
    <length>3</length>
    <type>Text</type>
</CustomField>